Chnages in Html
* now for conclusion using ol list

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
 
       <section>
         <h3>Conclusion</h3>
-        <p>
-          Rooftop farming is more than a trend; it is a sustainable movement.
-        </p>
+        <ol>
+          <li>Rooftop farming is more than a trend.</li>
+          <li>it is a sustainable movement.</li>
+        </ol>
       </section>
 
       <footer>
