Changes in html
* now using ol for Why Rooftop Gardens Matter also

--- a/index.html
+++ b/index.html
@@ -46,18 +46,12 @@
 
       <section>
         <h3>Why Rooftop Gardens Matter</h3>
-        <p>
-          Cities face food insecurity and environmental stress.
-          Rooftop gardens reduce heat and improve air quality.
-        </p>
-
-        <p>
-          <mark>Urban farms can reduce city temperatures by 2°C.</mark>
-        </p>
-
-        <p>
-          <data value="500">Average yield per rooftop: 500 kg per year.</data>
-        </p>
+        <ol>
+          <li>Cities face food insecurity and environmental stress.
+            Rooftop gardens reduce heat and improve air quality.</li>
+          <li><mark>Urban farms can reduce city temperatures by 2°C.</mark></li>
+          <li><data value="500">Average yield per rooftop: 500 kg per year.</data></li>
+        </ol>
       </section>
 
       <section>
